test/error/ast/BadModule.mod
MODULE BadModule;
BEGIN
  x := 1;
END BadModule.
